refactor player state
