# internal/server/restapi/handlers/player_state.go
@@ -9,14 +9,14 @@ import (
 	baldaapi "github.com/rustwizard/balda/internal/server/ogen"
 )
 
-// GetUsersStateUID implements baldaapi.Handler.
-func (h *Handlers) GetUsersStateUID(ctx context.Context, params baldaapi.GetUsersStateUIDParams) (baldaapi.GetUsersStateUIDRes, error) {
+// GetPlayerStateUID implements baldaapi.Handler.
+func (h *Handlers) GetPlayerStateUID(ctx context.Context, params baldaapi.GetPlayerStateUIDParams) (baldaapi.GetPlayerStateUIDRes, error) {
 	var nickname string
 	var exp, flags, lives int64
 	var gameID int32
 
 	if err := pgx.BeginTxFunc(ctx, h.svc.DB().Pool(), pgx.TxOptions{}, func(tx pgx.Tx) error {
-		return tx.QueryRow(ctx, `SELECT nickname, exp, flags, lives FROM user_state WHERE user_id = $1`, params.UID).
+		return tx.QueryRow(ctx, `SELECT nickname, exp, flags, lives FROM player_state WHERE player_id = $1`, params.UID).
 			Scan(&nickname, &exp, &flags, &lives)
 	}); err != nil {
 		slog.Error("user state: fetch user state from db", slog.Any("error", err))
@@ -30,8 +30,8 @@ func (h *Handlers) GetUsersStateUID(ctx context.Context, params baldaapi.GetUser
 	// TODO: check if user in the game and set gameID
 	_ = gameID
 
-	return &baldaapi.UserState{
-		UID:      baldaapi.NewOptInt64(params.UID),
+	return &baldaapi.PlayerState{
+		UID:      baldaapi.NewOptUUID(params.UID),
 		Nickname: baldaapi.NewOptString(nickname),
 		Exp:      baldaapi.NewOptInt64(exp),
 		Flags:    baldaapi.NewOptInt64(flags),
